Adicao de mais controllers, suas respectivas rotas e documentacao no swagger. Ainda não tolera varios tipos de requisiçoes, dependendo da requisicao vai dar erro 500
