# src/models/comment.ts
@@ -1,0 +1,8 @@
+export interface Comment {
+    id: number;
+    postId: number;
+    authorId: number;
+    content: string;
+    createdAt: Date;
+  }
+  
