# src/models/post.ts
@@ -1,0 +1,8 @@
+export interface Post {
+    id: number;
+    title: string;
+    content: string;
+    authorId: number;
+    createdAt: Date;
+  }
+  
