# src/models/user.ts
@@ -1,8 +1,7 @@
 export interface User {
-    id: number;
-    name: string;
-    email: string;
-    password_hash: string;
-    created_at: Date;
-  }
-  
+  id: number;
+  name: string;
+  email: string;
+  passwordHash: string;
+  created_at: Date;
+}
