# src/routes/auth.ts
@@ -1,8 +1,9 @@
 import { Router } from 'express';
-import { login } from '../controllers/authController';
+import { login, register } from '../controllers/authController';
 
 const authRouter = Router();
 
 authRouter.post('/login', login);
+authRouter.post('/register', register);
 
 export default authRouter;
